# SOK-Project

./: .gitignore  example.json  pyrightconfig.json  requirements.txt
api/: pyproject.toml
api/graph_api/: __init__.py
api/graph_api/contracts/: __init__.py  data_source.py  visualizer.py
api/graph_api/model/: __init__.py  attribute.py  edge.py  errors.py  graph.py  node.py
api/graph_api/query/: __init__.py  filters.py  search.py
data_source_csv/: README.md  pyproject.toml
data_source_csv/csv_data_source/: __init__.py  errors.py  models.py  pipeline.py  plugin.py  strategies.py  type_inference.py
data_source_csv/tests/: test_csv_data_source_plugin.py
data_source_csv/tests/fixtures/: adjacency_list_cycle.csv  adjacency_list_invalid_directed.csv  adjacency_list_invalid_edge_id.csv  adjacency_list_missing_columns.csv  adjacency_list_valid.csv  edge_list_invalid_directed.csv  edge_list_missing_columns.csv  edge_list_valid.csv  matrix_duplicate_source.csv  matrix_missing_source_column.csv  matrix_missing_target_columns.csv  matrix_valid.csv
data_source_plugin_json/: __init__.py  errors.py  parser.py  plugin.py  pyproject.toml
data_source_plugin_json/tests/: employees.json  test_parser.py
graph_explorer/config/: settings.py
graph_explorer/main/: urls.py  views.py
graph_explorer/templates/main/: home.html  workspace.html
platform/: pyproject.toml
platform/graph_platform/: __init__.py
platform/graph_platform/app/: __init__.py
platform/graph_platform/core/: __init__.py  graph_service.py  plugin_registry.py  workspace.py
simple_visualizer/: __init__.py  plugin.py  pyproject.toml  renderer.py
simple_visualizer/templates/: simple_graph.html
simple_visualizer/tests/: test_simple_visualizer.py
