[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-source-csv"
version = "0.1.0"
description = "CSV data source plugin for graph visualization platform"
requires-python = ">=3.11"
dependencies = [
    "graph-api"
]

[project.entry-points."graph_platform.data_source_plugins"]
csv = "csv_data_source.plugin:CsvDataSourcePlugin"

[tool.setuptools.packages.find]
where = ["."]
