[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-source-plugin-json"
version = "0.1.0"
description = "JSON data source plugin for graph visualization platform"
requires-python = ">=3.11"
dependencies = [
    "graph-api"
]

[tool.setuptools]
packages = ["data_source_plugin_json"]

[tool.setuptools.package-dir]
data_source_plugin_json = "."
